--- a/share/applications/fg42.desktop
+++ b/share/applications/fg42.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Kuso
-GenericName=Kuso IDE
+Name=FG42
+GenericName=FG42
 Comment=An Emacs base IDE for emacs lovers.
 MimeType=text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-java;application/x-shellscript;text/x-c;text/x-c++;text/x-ruby;text/x-python;
 Type=Application
 Terminal=false
 Categories=Development;TextEditor;
-StartupWMClass=Kuso
-Exec=--PATH--/kuso %F
+StartupWMClass=FG42
+Exec=--PATH--/fg42 %F
 Icon=kuso
 Version=--VERSION--
