new icon took place, Makefile added as an installer

--- a/share/applications/fg42.desktop
+++ b/share/applications/fg42.desktop
@@ -3,11 +3,11 @@ Encoding=UTF-8
 Name=FG42
 GenericName=FG42
 Comment=An Emacs base IDE for emacs lovers.
-MimeType=text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-java;application/x-shellscript;text/x-c;text/x-c++;text/x-ruby;text/x-python;
+MimeType=text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-java;application/x-shellscript;text/x-c;text/x-c++;text/x-ruby;text/x-python;text/x-clojure;text/css;text/html;text/x-javascript;
 Type=Application
 Terminal=false
 Categories=Development;TextEditor;
 StartupWMClass=FG42
-Exec=--PATH--/fg42 %F
+Exec=/usr/local/bin/fg42 %F
 Icon=kuso
-Version=--VERSION--
+Version=2.67
