john_titor client has been added

--- a/john_titor/package.json
+++ b/john_titor/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "elrpc": "^0.1.0",
     "github": "^14.0.0",
+    "googleapis": "27",
     "shadow-cljs": "^2.6.7",
     "xhr2": "^0.1.4"
   }
